@@ -5,44 +5,40 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.BlockHitResult;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
+/** What an entity ran into this tick. Immutable; lists are never null. */
 public class Collision {
     public static final Collision NONE = new Collision(
             CollisionType.NONE,
-            0.0,
-            0.0,
-            new ArrayList<>(),
-            Collections.emptyList(),
-            new ArrayList<>(),
-            new ArrayList<>()
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of()
     );
 
     public final CollisionType collisionType;
-    public final double highestYLevel;
-    public final double lowestYLevel;
-    public final ArrayList<BlockState> blockStates;
+    public final List<BlockState> blockStates;
     public final List<Entity> collidingEntities;
-
     public final List<BlockPos> impactedPositions;
     public final List<BlockHitResult> impactedHits;
 
     public enum CollisionType {
-        // do not reorder, ordinal is used for priority.
-        NONE, SOLID, ENTITY, SLIME, HONEY, BED,
+        NONE(0), SOLID(1), WATER(2), ENTITY(3), SLIME(4), HONEY(5), BED(6);
+
+        /** Higher priority wins when several block types are hit in one tick. */
+        public final int priority;
+
+        CollisionType(int priority) {
+            this.priority = priority;
+        }
     }
 
     public Collision(CollisionType collisionType,
-                     double highestYLevel,
-                     double lowestYLevel,
-                     ArrayList<BlockState> blockStates,
+                     List<BlockState> blockStates,
                      List<Entity> collidingEntities,
                      List<BlockPos> impactedPositions,
                      List<BlockHitResult> impactedHits) {
-        this.highestYLevel = highestYLevel;
-        this.lowestYLevel = lowestYLevel;
         this.collisionType = collisionType;
         this.blockStates = blockStates;
         this.collidingEntities = collidingEntities;
